<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="@string/pref_night_mode"
        android:summary="@string/summary_night_mode"
        android:title="@string/title_night_mode" />

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/pref_adult_filter"
        android:summary="@string/summary_adult_filter"
        android:title="@string/title_adult_filter" />

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/pref_tab_history"
        android:summary="@string/summary_tab_history"
        android:title="@string/title_tab_history" />

    <androidx.preference.ListPreference
        android:defaultValue="900"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="@string/pref_sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />

    <androidx.preference.ListPreference
        android:defaultValue="@string/default_items_page_titles"
        android:entries="@array/pref_items_page_titles"
        android:entryValues="@array/pref_items_page_values"
        android:key="@string/pref_item_page"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_item_page" />

    <androidx.preference.ListPreference
        android:defaultValue="@string/default_depth_page_titles"
        android:entries="@array/pref_depth_page_titles"
        android:entryValues="@array/pref_depth_page_values"
        android:key="@string/pref_depth_page"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_depth_page" />

    <info.pelleritoudacity.android.rcapstone.preference.FactoryDataReset
        android:summary="@string/summary_clear_data"
        android:title="@string/title_clear_data" />

    <androidx.preference.PreferenceCategory android:key="pref_cat_1">

        <Preference
            android:key="@string/pref_app_version"
            android:title="@string/title_app_version" />

        <Preference
            android:key="@string/pref_privacy"
            android:title="Terms and privacy policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_url_privacy" />
        </Preference>

        <Preference
            android:key="pref_contact"
            android:title="Contact Us" />

    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>