<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_action_login"
        android:enabled="true"
        android:title="@string/title_menu_login"
        android:visible="true" />
    <item
        android:id="@+id/menu_action_logout"
        android:enabled="true"
        android:title="@string/title_menu_logout"
        android:visible="false" />

    <item
        android:enabled="true"
        android:title="@string/title_menu_search"
        android:visible="true">
        <menu>
            <item
                android:id="@+id/menu_action_subscribe"
                android:enabled="true"
                android:title="@string/title_menu_subscribe"
                android:visible="true" />

            <item
                android:id="@+id/menu_action_link"
                android:enabled="true"
                android:title="@string/title_menu_link"
                android:visible="true" />

        </menu>

    </item>

    <item
        android:id="@+id/menu_action_refresh"
        android:enabled="true"
        android:title="@string/title_menu_mode_refresh"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_action_create"
        android:enabled="true"
        android:title="@string/title_menu_create"
        android:visible="true" />

    <item
        android:id="@+id/menu_action_settings"
        android:enabled="true"
        android:title="@string/title_menu_mode_settings"
        android:visible="true" />

</menu>

