<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="?android:attr/colorBackground"
    app:cardElevation="@dimen/list_card_elevation">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_handle"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical|start"
        android:contentDescription="@string/text_handle_description"
        android:paddingEnd="@dimen/base_navigation_padding_horizontal"
        android:paddingStart="@dimen/base_navigation_padding_horizontal"

        android:scaleType="center" />

    <ImageView

        android:id="@+id/img_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/text_icon_description"
        android:paddingEnd="@dimen/base_navigation_padding_horizontal"
        android:paddingStart="@dimen/base_navigation_padding_horizontal"
        android:scaleType="centerCrop" />


    <TextView
        android:id="@+id/tv_reddit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?android:attr/textColorPrimary" />


    <ImageView
        android:id="@+id/img_manage_stars"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical|end"
        android:contentDescription="@string/manage_stars_description"
        android:paddingEnd="@dimen/base_navigation_padding_horizontal"
        android:paddingStart="@dimen/base_navigation_padding_horizontal"
        android:scaleType="center" />

</LinearLayout>

</android.support.v7.widget.CardView>