<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="start"
            android:padding="6dp"
            android:text="@string/text_dialog_search"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/editext_dialog_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/search_subscribe_hint"
            android:inputType="textAutoComplete"
            tools:ignore="Autofill" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_600" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_cancel_subscribe"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/text_cancel_dialog"
                android:textAllCaps="false" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey_600" />

            <Button
                android:id="@+id/dialog_submit_subscribe"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/text_dialog_search"
                android:textAllCaps="false" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>